# nano-vllm-voxcpm-hifi

./: README.md  example.py  example_lora.py  example_lora_sync.py  pyproject.toml
.github/workflows/: release-pypi.yml
benchmark/: bench_closed_loop_users.py  bench_inference.py  bench_open_loop_users.py
deployment/: README.md  client.py  pyproject.toml
deployment/app/api/: api.py
deployment/app/api/routes/: encode_latents.py  generate.py  hifi.py  prompts.py  references.py
deployment/app/core/: config.py  lifespan.py  metrics.py
deployment/app/schemas/: http.py
deployment/app/services/: lora_resolver.py  mp3.py
deployment/tests/: test_core_config.py  test_core_lifespan_lora.py  test_deployment_app.py  test_routes_additional_coverage.py  test_services_lora_resolver.py
nanovllm_voxcpm/engine/: block_manager.py  llm_engine.py  model_runner.py  scheduler.py
nanovllm_voxcpm/layers/: attention.py  audio_vae.py  audio_vae_v2.py  embed_head.py  linear.py  lora.py  rotary_embedding.py
nanovllm_voxcpm/utils/: loader.py
tests/unit/: test_layers_basic.py  test_llm_from_pretrained.py  test_loader_lora.py  test_lora_layers.py  test_model_runner_helpers.py  test_voxcpm2_chunk_sizes.py  test_voxcpm2_residual_lm_no_rope.py  test_voxcpm2_server_encode_latents.py  test_voxcpm_engine_max_model_len.py
tools/: bench_hifi_blocking_concurrency.py  bench_hifi_concurrency.py  bench_latent_concurrency.py  bench_prompt_family_hot.py  bench_prompt_vs_ref_hot.py  nanovllm-hifi-gradio.service.example  nanovllm_hifi_gradio.py  post_start_warmup.sh
(+11 files in other folders)
