[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nano-vllm-voxcpm-hifi-deployment"
version = "0.0.0"
description = "FastAPI service wrapper for nano-vllm-voxcpm-hifi"
requires-python = ">=3.10,<3.13"
dependencies = [
    "nano-vllm-voxcpm-hifi",
    "fastapi[standard]",
    "aiohttp",
    "prometheus_client",
    "lameenc",
    "boto3",
    "huggingface_hub",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.uv.sources]
nano-vllm-voxcpm-hifi = { workspace = true }
